@@ -1,5 +1,5 @@
 AUX 0.8.3-gentoo-fb.patch 804 RMD160 4e46da3ee7b36b2f6618089c42ab06a54fc5c450 SHA1 6a1f211fe2437205da767bffcdb50c83e1725a2a SHA256 5496471c4ace51561054aadce35b7772ac65b54ace04329386d2b2dfc1ef8c8f
 DIST plymouth-0.8.3.tar.bz2 763575 RMD160 bb5c13e4eb48d8b881a4d2cc15190c377430f672 SHA1 30135d3b2db42778b32b6d2d9e7e0da90f0da599 SHA256 2e51abbc087228f7910302334755d0190fc9e923eae9992150adb0f6cccc9077
-EBUILD plymouth-0.8.3-r2.ebuild 1463 RMD160 79befacd75b4a184d0d099d7a5c6d014ab29d6ca SHA1 1a274457f5219766543955591f5cb8821f134704 SHA256 9d2cd8b9a2e6cfb0f691d83084cba53c5c039c06b1859d4279988994b21a49d5
-MISC ChangeLog 818 RMD160 d15f1e4db881f74547a6a07b4d550bbf3007223c SHA1 730381ffd88003446e25da3b7cea85e1c94bd169 SHA256 73f7947a9191b94bba7ef6d2645cd360a36e8b13d96221a42a82320817a95135
+EBUILD plymouth-0.8.3-r3.ebuild 1471 RMD160 b7030bad08b80bf9bccf415b97a1e647c03b7701 SHA1 5345a10ea35d24e7a390546ab752d770519fd682 SHA256 61ddd6fc4bc45fa666122f200681b2568f3f042d10655582a87703f95f68ed95
+MISC ChangeLog 1059 RMD160 f3e65c116cdeac1f1ff25b701b14f9bd5ff6852b SHA1 632c6465fe7d12eaafdb0170638f1af0b6465e49 SHA256 05abd57b558ebde630defbab5a1dfc591ef53ee09cdbd05918e7bccb3f63b711
 MISC metadata.xml 596 RMD160 816ee298a2476167179a3814fb5b29c6a21a04af SHA1 457ba11297f35384f2565dd0f4437953b43f772f SHA256 04dc808548e1402ea0e41a3568042e58c97e397581cc92f6b2aea29f9a1021f3
